tests/bad/read_redefine.kel
fn read_int() -> int {
  return 0
}

fn main() {
  println(read_int())
}
